Missing branches for exception cases and add tests for the same